--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -94,6 +94,8 @@ Resources:
       # Use DefinitionString rather than Definition so that we can use null values
       DefinitionString:
         Fn::ToJsonString:
+          # TODO: need to handle removing the account ID from states that no longer apply
+          # e.g. if account has been cleaned and is set to "ready", need to remove it from "account_status#leased"
           StartAt: MarkAccountAsInitial
           States:
             # TEMP - force one account to always be in the initial state for testing purposes
@@ -137,8 +139,7 @@ Resources:
             FetchAccounts:
               Type: Task
               Resource: arn:aws:states:::aws-sdk:dynamodb:query
-              # Next: ProcessAccounts
-              End: true
+              Next: ProcessAccounts
               Parameters:
                 TableName: !Sub "${Environment}-aws-sandbox-accounts-account-pool"
                 KeyConditionExpression: "#pk = :pk"
@@ -148,56 +149,83 @@ Resources:
                   :pk:
                     S: account_status#initial
               OutputPath: $.Items
-            # ProcessAccounts:
-            #   Type: Map
-            #   End: true
-            #   ItemSelector:
-            #     account_id.$: $$.Map.Item.Value.sk.S
-            #   ItemProcessor:
-            #     ProcessorConfig:
-            #       Mode: INLINE
-            #     StartAt: AWSNuke
-            #     States:
-            #       AWSNuke:
-            #         Type: Task
-            #         Resource: arn:aws:states:::codebuild:startBuild.sync
-            #         TimeoutSeconds: 900
-            #         Next: MarkAccountAsReady
-            #         ResultPath: null
-            #         Parameters:
-            #           ProjectName: !Ref CodeBuildProject
-            #           EnvironmentVariablesOverride:
-            #             - Type: PLAINTEXT
-            #               Name: ACCOUNT_ID
-            #               Value.$: $.account_id
-            #         Catch:
-            #           - ErrorEquals:
-            #               - States.ALL
-            #             Next: MarkAccountAsFailed
-            #             ResultPath: null
-            #       MarkAccountAsFailed:
-            #         Type: Task
-            #         Resource: arn:aws:states:::dynamodb:putItem
-            #         End: true
-            #         Parameters:
-            #           TableName: !Sub "${Environment}-aws-sandbox-accounts-account-pool"
-            #           Item:
-            #             pk:
-            #               S: account
-            #             sk:
-            #               S.$: $.account_id
-            #             status:
-            #               S: failed
-            #       MarkAccountAsReady:
-            #         Type: Task
-            #         Resource: arn:aws:states:::dynamodb:putItem
-            #         End: true
-            #         Parameters:
-            #           TableName: !Sub "${Environment}-aws-sandbox-accounts-account-pool"
-            #           Item:
-            #             pk:
-            #               S: account
-            #             sk:
-            #               S.$: $.account_id
-            #             status:
-            #               S: ready
+            ProcessAccounts:
+              Type: Map
+              End: true
+              ItemSelector:
+                account_id.$: $$.Map.Item.Value.sk.S
+              ItemProcessor:
+                ProcessorConfig:
+                  Mode: INLINE
+                StartAt: AWSNuke
+                States:
+                  AWSNuke:
+                    Type: Task
+                    Resource: arn:aws:states:::codebuild:startBuild.sync
+                    TimeoutSeconds: 900
+                    Next: MarkAccountAsAvailable
+                    ResultPath: null
+                    Parameters:
+                      ProjectName: !Ref CodeBuildProject
+                      EnvironmentVariablesOverride:
+                        - Type: PLAINTEXT
+                          Name: ACCOUNT_ID
+                          Value.$: $.account_id
+                    Catch:
+                      - ErrorEquals:
+                          - States.ALL
+                        Next: MarkAccountAsFailed
+                        ResultPath: null
+                  MarkAccountAsFailed:
+                    Type: Task
+                    Resource: arn:aws:states:::dynamodb:putItem
+                    End: true
+                    Parameters:
+                      TransactItems:
+                        - Update:
+                            TableName: !Sub "${Environment}-aws-sandbox-accounts-account-pool"
+                            Key:
+                              pk:
+                                S: account_status#failed
+                            UpdateExpression: "SET #data = list_append(#data, :values)"
+                            ExpressionAttributeNames:
+                              "#data": data
+                            ExpressionAttributeValues:
+                              ":values":
+                                L:
+                                  - S.$: $.account_id
+                        - Update:
+                            TableName: !Sub "${Environment}-aws-sandbox-accounts-account-pool"
+                            Key:
+                              pk:
+                                S.$: States.Format("account_id#{}", $.account_id)
+                            UpdateExpression: "SET #data = failed"
+                            ExpressionAttributeNames:
+                              "#data": data
+                  MarkAccountAsAvailable:
+                    Type: Task
+                    Resource: arn:aws:states:::dynamodb:putItem
+                    End: true
+                    Parameters:
+                      TableName: !Sub "${Environment}-aws-sandbox-accounts-account-pool"
+                      TransactItems:
+                        - Update:
+                            TableName: !Sub "${Environment}-aws-sandbox-accounts-account-pool"
+                            Key:
+                              pk:
+                                S: account_status#available
+                            UpdateExpression: "SET #data = list_append(#data, :values)"
+                            ExpressionAttributeNames:
+                              "#data": data
+                            ExpressionAttributeValues:
+                              ":values":
+                                L:
+                                  - S.$: $.account_id
+                        - Update:
+                            TableName: !Sub "${Environment}-aws-sandbox-accounts-account-pool"
+                            Key:
+                              pk:
+                                S.$: States.Format("account_id#{}", $.account_id)
+                            UpdateExpression: "SET #data = available"
+                            ExpressionAttributeNames:
+                              "#data": data
