--- a/apps/account-manager-db-client/Makefile
+++ b/apps/account-manager-db-client/Makefile
@@ -16,7 +16,7 @@ test: install
 			export AWS_SESSION_TOKEN='testing' && \
 			export AWS_SECURITY_TOKEN='testing' && \
 			export PATH="${HOME}/.poetry/bin:${PATH}" && \
-			poetry run pylint pool_manager \
+			poetry run pylint account_manager_db_client \
 	)
 
 package: clean install test
