--- a/apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml
+++ b/apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml
@@ -1,10 +1,11 @@
 Transform: AWS::Serverless-2016-10-31
-Description: Infrastructure for aws-sandbox-accounts pool-manager
+Description: Infrastructure for aws-sandbox-accounts account-manager-db-client
 Parameters:
   Environment:
     Description: The infrastructure environment
     Type: String
     AllowedValues:
+      - test
       - live
 Resources:
   FunctionExecutionRole:
@@ -20,7 +21,7 @@ Resources:
               - sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-      RoleName: !Sub "${Environment}-aws-sandbox-accounts-pool-manager"
+      RoleName: !Sub "${Environment}-aws-sandbox-accounts-account-manager-db-client"
   Function:
     Type: AWS::Serverless::Function
     Properties:
@@ -28,7 +29,7 @@ Resources:
       Runtime: python3.12
       CodeUri: ../../build
       Role: !GetAtt FunctionExecutionRole.Arn
-      FunctionName: !Sub "${Environment}-aws-sandbox-accounts-pool-manager"
+      FunctionName: !Sub "${Environment}-aws-sandbox-accounts-account-manager-db-client"
       MemorySize: 256
       Timeout: 120
       Tracing: Active
