--- a/apps/account-manager-db-client/pyproject.toml
+++ b/apps/account-manager-db-client/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.12"
 aws-lambda-powertools = {extras = ["tracer"], version = "^2.3.1"}
 pylint = "^3.2.4"
+boto3 = "^1.34.139"
 
 [build-system]
 requires = ["poetry-core"]
