--- a/apps/account-manager-db-client/Makefile
+++ b/apps/account-manager-db-client/Makefile
@@ -20,4 +20,11 @@ test: install
 	)
 
 package: clean install test
-	./package
+	( \
+			export PATH="${HOME}/.poetry/bin:${PATH}" && \
+			export VENV_PATH=$(poetry env info -p) && \
+			poetry install --only main && \
+			mkdir build && \
+			cp -R ${VENV_PATH}/lib/python3.*/site-packages/* build/ && \
+			cp -R account_manager_db_client/ build/ \
+	)
