--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,6 @@ env:
     AWS_SECRET_ACCESS_KEY: testing
     AWS_SESSION_TOKEN: testing
     AWS_SECURITY_TOKEN: testing
-    POETRY_BIN: /tmp/.poetry/bin/poetry
 phases:
   install:
     runtime-versions:
@@ -17,10 +16,10 @@ phases:
       - curl -sSL https://install.python-poetry.org | POETRY_HOME=${HOME}/.poetry python3 -
       # account-manager-db-client
       - cd apps/account-manager-db-client
-      - $POETRY_BIN install
-      - $POETRY_BIN run pylint account_manager_db_client
+      - /tmp/.poetry/bin/poetry install
+      - /tmp/.poetry/bin/poetry run pylint account_manager_db_client
       - export VENV_PATH=$(poetry env info -p)
-      - $POETRY_BIN install --only main
+      - /tmp/.poetry/bin/poetry install --only main
       - mkdir build
       - cp -R ${VENV_PATH}/lib/python3.*/site-packages/* build/
       - cp -R account_manager_db_client/ build/
