--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
       # install poetry
       - python3 -m pip install pipx
       - python3 -m pipx ensurepath
-      - pipx install poetry==1.8.2
+      - pipx install poetry
       # account-manager-db-client
       - cd apps/account-manager-db-client
       - export PATH="${HOME}/.poetry/bin:${PATH}" poetry install
